// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display errors when click Add spending with empty fields 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 eWmAkr"
  style={
    Object {
      "zIndex": "1",
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 fVtecF"
      >
        <div
          className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
        >
          <input
            autoComplete="off"
            className="StyledTextInput-sc-1x30a0s-0 cuRQxH"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Name"
            value=""
          />
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 fsgjrx"
      >
        <span
          className="StyledText-sc-1sadyjn-0 hOyydb"
        >
          required
        </span>
      </div>
    </div>
    <div
      className="StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 fVtecF"
      >
        <div
          className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
        >
          <input
            autoComplete="off"
            className="StyledTextInput-sc-1x30a0s-0 cuRQxH"
            name="value"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Value"
            value=""
          />
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 fsgjrx"
      >
        <span
          className="StyledText-sc-1sadyjn-0 hOyydb"
        >
          required
        </span>
      </div>
    </div>
    <button
      className="StyledButton-sc-323bzc-0 fjELoD"
      name="submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="submit"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 hHwlHq"
      >
        <svg
          aria-label="Add"
          className="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,22 L12,2 M2,12 L22,12"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
        />
        Add spending
      </div>
    </button>
  </form>
</div>
`;

exports[`should render initial layout 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 eWmAkr"
  style={
    Object {
      "zIndex": "1",
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      >
        <div
          className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
        >
          <input
            autoComplete="off"
            className="StyledTextInput-sc-1x30a0s-0 cuRQxH"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Name"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="StyledBox-sc-13pk1d4-0 CAsMy"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gZSidW"
      >
        <div
          className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
        >
          <input
            autoComplete="off"
            className="StyledTextInput-sc-1x30a0s-0 cuRQxH"
            name="value"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Value"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="StyledButton-sc-323bzc-0 fjELoD"
      name="submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="submit"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 hHwlHq"
      >
        <svg
          aria-label="Add"
          className="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,22 L12,2 M2,12 L22,12"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
        />
        Add spending
      </div>
    </button>
  </form>
</div>
`;
